@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.13
 Date: ????
+  Changes:
+    - Support ghost entities
   Bugfixes:
     - Do not crash on proxy-containers
 ---------------------------------------------------------------------------------------------------
